# lection_koyeb

./: .coverage  .example.env  main.py  pyproject.toml  requirements.txt  test.db
client/: index.html  main.html
client/css/: style.css
client/javascript/: app.js  main.js
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 1cfe3cdcf17d_add_confirmed.py  860c17a724b1_add_role_of_user.py  dbb8feb775d4_init.py  fd9a5b2ea963_add_user.py
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: dogs.py  owners.py  users.py
src/routes/: auth.py  dogs.py  owners.py  users.py
src/services/: auth.py  cloud_image.py  roles.py
src/services/templates/: email_template.html
templates/: index.html
tests/: conftest.py  test_main.py  test_route_auth.py  test_route_dogs.py  test_unit_repository_dogs.py
