[tool.poetry]
name = "fastapi lection"
version = "0.1.0"
description = ""
authors = ["Andrii Stoian <astoyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.104.1"
alembic = "^1.13.0"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.2"}
jinja2 = "^3.1.2"
pydantic-settings = "^2.1.0"
libgravatar = "^1.0.4"
redis = "^5.0.1"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cloudinary = "^1.37.0"
python-multipart = "^0.0.6"
fastapi-limiter = "0.1.5"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
